packages/client/src/package/components/Room.module.scss
@import '../Main';

.wrapper {
  position: relative;
  display: flex;
  flex-flow: column;
  overflow: hidden;
  height: 100vh;
  width: 100%;
  padding: 0;

  .empty {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

.room__link {
  margin: 0.5rem;
  font-size: x-small;
}

.muted {
  position: absolute;
  z-index: 12;
}

.setting__actions {
  position: relative;
  display: flex;
}

.container {
  position: relative;
  width: 100%;
  height: 90vh;
  display: grid;
  grid-gap: 0;
  overflow: hidden;
}

.video {
  video {
    cursor: pointer;
  }

  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 0;
  min-width: 0;
  transition: width 0.3s ease-in;
  margin: auto;

  &.hidden {
    display: none;
  }
}

.video__fixed {
  video {
    cursor: default;
  }

  z-index: 120;
  position: fixed;
  width: 100vw;
  height: 100vh;
  background-color: rgb(0 0 0 / 95%);
}

.video__actions {
  position: absolute;
  top: 0;
  right: 0;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
  width: 100%;

  &.hidden {
    display: none;
  }
}

.actions {
  position: relative;
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
  height: 10vh;
  width: 100%;
  background-image: rgba($color: gray, $alpha: 5%);

  .icons {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
  }

  .buttons {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
  }
}

.error {
  position: relative;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  color: red;
}

.link__input {
  position: relative;
  height: 2rem;
  width: 100%;
}

.link__container {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 25%;
}

.button__back {
  position: relative;
  width: 100%;
  height: 100%;
}

.video__timer {
  cursor: default;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: 600;

  .text {
    position: relative;
  }

  @supports (-moz-appearance: none) {
    .text {
      margin-top: 5px;
    }
  }
}

